--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="action-buttons">
             <button onclick="generarReporteDiario()" class="generar-pdf">Generar Reporte Diario</button>
             <button onclick="mostrarListaCostos()" class="lista-costos">Mostrar Lista de Costos</button>
-            <button onclick="generarRespaldoCompleto()" class="productosenlista">Generar Respaldo Completo</button>
+            <button onclick="PDFListaProductos()" class="productosenlista">PDF Lista Productos</button>
            <button onclick="limpiarLista()" class="limpiar-lista">Limpiar Lista</button>
         </div>
 
