--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="action-buttons">
             <button onclick="generarReporteDiario()" class="generar-pdf">Generar Reporte Diario</button>
             <button onclick="mostrarListaCostos()" class="lista-costos">Mostrar Lista de Costos</button>
-            <button onclick="generarRespaldoCompleto()" class="generar-respaldo">Generar Respaldo Completo</button>
+            <button onclick="generarRespaldoCompleto()" class="generar-respaldo">PDF LISTA PRODUCTOS</button>
            <button onclick="limpiarLista()" class="limpiar-lista">Limpiar Lista</button>
         </div>
 
@@ -303,4 +303,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
